entire home_screen updated with a new UI - packages added

--- a/lib/constants/l10n/app_en.arb
+++ b/lib/constants/l10n/app_en.arb
@@ -8,5 +8,8 @@
   "pleaseLoginBeforeContinue": "Please login before proceeding further",
   "login": "Login",
   "thisFieldIsRequired": "This field is requried",
-  "pleaseFillAllRequiredFields": "Please fill all requried fields"
+  "pleaseFillAllRequiredFields": "Please fill all requried fields",
+    "h": "P",
+    "gh": "A",
+    "t": "L"
 }
