home_screen updated -> demo data + popup_menu + search_bar

--- a/lib/constants/l10n/app_en.arb
+++ b/lib/constants/l10n/app_en.arb
@@ -9,7 +9,13 @@
   "login": "Login",
   "thisFieldIsRequired": "This field is requried",
   "pleaseFillAllRequiredFields": "Please fill all requried fields",
-    "h": "P",
-    "gh": "A",
-    "t": "L"
+  "h": "P",
+  "gh": "A",
+  "t": "L",
+  "comingSoon": "Coming soon...",
+  "present": "Present",
+  "absent": "Absent",
+  "late": "Late",
+  "details": "Details",
+  "search": "جستجو"
 }
